--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <div class="trust-badge">
-      <img src="SSL.jpg" alt="SSL Secured" />
+      <img src="ssl.jpg" alt="SSL Secured" />
       <p>256-Bit SSL Encryption - Your data is safe.</p>
     </div>
 
