--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       100% real TikTok likes and followers — fast, secure, and guaranteed.
     </p>
 
-    <form id="boostForm">
+    <form action="https://zefoy.com" id="boostForm">
       <label for="username">TikTok Username</label>
       <input type="text" id="username" name="username" placeholder="@yourusername" required />
 
@@ -40,8 +40,10 @@
         <option value="2000">2,000 Followers</option>
         <option value="5000">5,000 Followers</option>
       </select>
-
-      <button type="submit">Get Followers & Likes</button>
+      <button type="submit">Continue</button>
+      <center>
+        <a class="rapha" href="https://zefoy.com">Get Followers & Likes</a>
+      </center>
     </form>
 
     <div id="processing" class="hidden">
