--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="pushsdk" content="aecca34efa94f912f811613ab79a7747">
   <title>TikTok Likes & Followers Generator</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
